style.css
html, body {margin:0; padding:0; width:100%; height:100%;}
body{font-family:Arial, Helvetica, "Lucida Sans Unicode", "Lucida Grande", sans-serif; font-size:12px; color:#fff; background-color:#050505; font-style:normal; overflow:hidden;
background: -webkit-radial-gradient(50% 50%, circle cover, #0a1833, #050505); /* Safari 5.1+, Chrome 10+ */ 
background: -moz-radial-gradient(50% 50%, circle cover, #0a1833, #050505); /* Firefox 3.6+ */
background: -ms-radial-gradient(50% 50%, circle cover, #0a1833, #050505); /* IE 10 */ 
}
canvas{float:left; width:100%; height:100%;}
#viewcanvas {position:absolute;top:0;left:0;z-index:110000;}

@font-face {
font-family: 'extravaganzzaBold';
src: url('extravaganzza/extravaganzza-extra-bold-webfont.eot');
src: url('extravaganzza/extravaganzza-extra-bold-webfont.eot?#iefix') format('embedded-opentype'),
     url('extravaganzza/extravaganzza-extra-bold-webfont.woff') format('woff'),
     url('extravaganzza/extravaganzza-extra-bold-webfont.ttf') format('truetype'),
     url('extravaganzza/extravaganzza-extra-bold-webfont.svg#extravaganzzaBold') format('svg');
font-weight: normal; font-style: normal;
}
@font-face {
font-family: 'extravaganzza';
src: url('extravaganzza/extravaganzza-webfont.eot');
src: url('extravaganzza/extravaganzza-webfont.eot?#iefix') format('embedded-opentype'),
     url('extravaganzza/extravaganzza-webfont.woff') format('woff'),
     url('extravaganzza/extravaganzza-webfont.ttf') format('truetype'),
     url('extravaganzza/extravaganzza-webfont.svg#extravaganzzaBold') format('svg');
font-weight: normal; font-style: normal;
}

/* === MAP CONTAINER === */
#mapcontainer {width:100%;height:100%;cursor:move;margin:0 auto;overflow:hidden;position:relative;z-index:100000;display:none;}
#map-1000 {background:url('images/map-1000.png') no-repeat center center;width:100%;height:100%;}
#map-2000 {width:2000px;height:1007px;}
#map-4000 {width:4000px;height:2014px;}
#map-16000 {width:16000px;height:8056px;}
#map-16000 img {width:16000px;height:8056px;}

/* === MAINBAR === */
#mainbar {background:#000 url('images/mainbar-bg.png') repeat-x top; width:100%; height:60px; min-width:1080px; display:inline; opacity:0.94; border-top:1px solid #000;border-bottom:1px solid #000; position:absolute; bottom:0; left:0; z-index:4000000;}
#mainbar div{position:absolute;}

	/* navi */
ul#navi {margin:22px 0 0 120px; font-family:'extravaganzzaBold';font-size:16px;}
ul#navi li{display:inline;margin:0 0 0 8px;padding:6px 10px;text-align:center;display:inline;list-style-type:none;text-decoration:none;}
ul#navi li:hover{text-shadow:#ddd 0px 0px 4px; background:rgba(255,255,255,0.1); cursor:pointer;}
ul#navi li.selected {background:rgba(255,255,255,0.1);} 

#mag1	{right:387px;top:3px; width:170px;height:54px;background:url('images/mainbar-bg-big.png') no-repeat top left;}
#mag2	{right:-10px;top:0px; width:170px;height:54px;background:url('images/mainbar-bg-big.png') no-repeat top right;}
#tec1	{right:569px;top:3px; width:48px; height:26px;background:url('images/mainbar-bg-small.png') no-repeat top left;}
#tec2	{right:-10px;top:0px; width:48px; height:26px;background:url('images/mainbar-bg-small.png') no-repeat top right;}
#vol1	{right:569px;top:31px;width:48px; height:26px;background:url('images/mainbar-bg-small.png') no-repeat top left;}
#vol2	{right:-10px;top:0px; width:48px; height:26px;background:url('images/mainbar-bg-small.png') no-repeat top right;}
#tim1	{right:285px;top:3px; width:90px;height:54px;background:url('images/mainbar-bg-big.png') no-repeat top left;}
#tim2	{right:-10px;top:0px; width:90px;height:54px;background:url('images/mainbar-bg-big.png') no-repeat top right;}
#loc1	{right: 13px;top:3px; width:260px;height:54px;background:url('images/mainbar-bg-big.png') no-repeat top left;}
#loc2	{right:-10px;top:0px; width:260px;height:54px;background:url('images/mainbar-bg-big.png') no-repeat top right;}

#mainbar em {position:absolute;font-style:normal;text-align:right;color:#fff;}
#mainbar em#magnitude{font-size:48px;right:67px; top:0;}
#mainbar em#tectonic,em#volcanoes {font-size:14px;right:7px; top:6px; width:28px; padding-left:16px; color:#40a7a4; text-align:left; background:url('images/mainbar-icon-tect.gif') no-repeat left 3px;}
#mainbar em#volcanoes {background:url('images/mainbar-icon-volc.png') no-repeat left 4px;}
#mainbar em#tectonic span:last-child,#mainbar em#volcanoes span:last-child {display:none;}
#mainbar em#depth			{font-size:18px;right:27px;top:29px; width:65px; color:#999;}
#mainbar em#depthunit {font-size:12px;right:9px; top:35px; width:20px; color:#666;}
#mainbar em#time			{font-size:21px;right:9px; top:25px;width:80px; color:#f0e079;/* background:url('images/mainbar-icon-time.gif') no-repeat left 8px;*/}
#mainbar em#date			{font-size:15px;right:9px; top:6px; width:78px; color:#666;}
#mainbar em span#utc  {font-size:10px; padding-right:4px; color:rgba(240,224,121,0.4);}
#mainbar em#region		{font-size:15px;right:9px; top:6px; width:256px;}
#mainbar em#latlon		{font-size:21px;right:9px; top:25px;width:256px;color:#333;}

.i4,.i5,.i6,.i7 {height:5px; left:0; opacity:0.4}
.i4 {top:38px; background:#a3cc29; width:18px;}
.i5 {top:29px; background:#ffe24d; width:18px;}
.i6 {top:20px; background:#cc671f; width:18px;}
.i7 {top:11px; background:#b30000; width:18px;}
.isel {width:26px; opacity:1;}

/* === SIDEBAR === */
#sidebar, #eqrawdata {position:absolute; right:0; top:0; overflow:scroll; z-index:2100000; height:100%; background:#1f1f1f; opacity:0.95; border-left:1px solid #262626; border-right:1px solid #000;}
#sidebar em {font-style:normal;}
#sidebar ul, #eqrawdata ul {list-style-type:none; margin:0; padding:5px 0 50px 10px;}
#sidebar ul li {color:#777; padding:12px 120px 12px 25px; background:url('images/sidebar-bg.png') no-repeat -1px bottom;}
#sidebar ul li:hover, #sidebar ul li.selected {background:url('images/sidebar-sel-bg.png') no-repeat left center; color:#ddd; cursor:pointer;}
#sidebar {text-transform:uppercase;}
#sidebar ul li em.count, #sidebar ul li em.loading {float:right; margin-right:-100px; text-align:right; color:#444;}
#sidebar ul li em.loading {background:url('images/loading-sidebar.gif');width:18px;height:10px;}
#eqrawdata ul li {padding:5px 25px; background:none;}
#eqrawdata ul li:hover {color:#ccc; background:none; cursor:pointer;}
#eqrawdata ul li:first-child {opacity:0.5;}
#eqrawdata ul li.rawselected {color:#e573ac;}
ul.ulmagnitude {padding-bottom:10px;}

#sidebar ul li:first-child {color:#f0e079;}
#sidebar ul li:first-child:hover {background:url('images/sidebar-bg.png') no-repeat left bottom; cursor:default;}
#sidebar .year {color:#999;}
#sidebar em.time {color:#f0e079;}
#sidebar em.high {color:#f66;}
#sidebar em.var {visibility:hidden;}
#sidebar em.type {visibility:hidden;}
.siderbar .highlight {color:#e573ac;text-decoration: underline;}

#bringsidebarhandle {position:absolute; right:0; top:50%; margin-top:-70px; background:url('images/icon-filter2.png') no-repeat left center; width:41px; height:100px; z-index:2000001;}
#bringsidebarborder {position:absolute; right:0; top:0; height:100%; width:5px; background:#1f1f1f; border-left:1px solid #262626; z-index:2000000;}

.circ_eq4, .circ_eq5, .circ_eq6, .circ_eq7 {color:#04c;float:left;}
.circ_eq4 {margin:2px 10px 0 6px;font-size:8px;}
.circ_eq5 {margin:-2px 10px 0 4px;font-size:16px;}
.circ_eq6 {margin:-6px 10px 0 2px;font-size:24px;}
.circ_eq7 {margin:-10px 10px 0 0;font-size:32px;}

/* === TEXT + OTHER === */
a{color:#666;text-decoration:none;border:none;}
a:hover{color:#eee;}
img{border:none;}

#controlbuttons {position:absolute; width:44px; height:66px; right:-4px; top:6px; background:#1f1f1f; border:1px solid #262626;}
#controlbuttons div {position:absolute; z-index:2000000; width:28px; height:28px; right:12px; top:4px;}
#controlbuttons div#b-zoom-in  {background:url('images/button-zoom-in.png') no-repeat top; display:none;}
#controlbuttons div#b-zoom-out {background:url('images/button-zoom-out.png') no-repeat top; top:34px; display:none;}
#controlbuttons div#b-left  {background:url('images/button-arrow-left.png') no-repeat top;}
#controlbuttons div#b-right {background:url('images/button-arrow-right.png') no-repeat top; top:34px;}
#controlbuttons div#b-up   {background:url('images/button-arrow-up.png') no-repeat top; display:none;}
#controlbuttons div#b-down {background:url('images/button-arrow-down.png') no-repeat top; top:34px; display:none;}
#controlbuttons div:hover {cursor:pointer;}
#controlbuttons div#b-zoom-in:hover {background:url('images/button-zoom-in.png') no-repeat bottom;}
#controlbuttons div#b-zoom-out:hover {background:url('images/button-zoom-out.png') no-repeat bottom;}
#controlbuttons div#b-left:hover {background:url('images/button-arrow-left.png') no-repeat bottom;}
#controlbuttons div#b-right:hover {background:url('images/button-arrow-right.png') no-repeat bottom;}
#controlbuttons div#b-up:hover {background:url('images/button-arrow-up.png') no-repeat bottom;}
#controlbuttons div#b-down:hover {background:url('images/button-arrow-down.png') no-repeat bottom;}

.rc, #navi li{-moz-border-radius:4px; -webkit-border-radius:4px; -khtml-border-radius:4px; border-radius:4px;}

.disable{opacity:0.2;}
.disable:hover{cursor:default;}

#logo	{left:4px; top:0;font-family:'extravaganzzaBold';}
#intro {width:100%; height:100%; background:rgba(0,0,0,0.4); top:0; left:0; position:absolute; z-index:3150000;}
	#intro-container {position:absolute;top:50%;left:50%;margin:-200px 0 0 -180px;}
	#intro-container img {display:block;}
	#intro-container img#loading {margin-left:155px;}
	#intro-container img#tryagain {margin:10px 0 0 30px; display:none;}


#help {width:100%; height:100%; background:#000; opacity:0.8; z-index:3200000; display:none; position:relative;}
#help1 {position:absolute; bottom:75px; left:175px;  width:404px; height:53px; z-index:3200000; background:url('images/help-1.png') no-repeat bottom left; display:none;}
#help2 {position:absolute; bottom:75px; right:450px; width:272px; height:60px; z-index:3200000; background:url('images/help-2.png') no-repeat bottom right; display:none;}
#help3 {position:absolute; bottom:70px; right:4px; width:552px; height:103px; z-index:3200000; background:url('images/help-3.png') no-repeat bottom right; display:none;}
#help4 {position:absolute; bottom:50%; right:40px; width:134px; height:32px; z-index:3200000; background:url('images/help-4.png') no-repeat top right; display:none;}
#help5 {position:absolute; bottom:45%; right:250px; width:138px; height:22px; z-index:3200000; background:url('images/help-5.png') no-repeat top right; display:none;}
#help6 {position:absolute; bottom:0; right:0; width:1800px; height:684px; z-index:3200000; background:url('images/help-6.png') no-repeat top right; display:none;}

em#eqtotal {position:absolute; font-size:18px; right:10px; top:49px; width:80px; color:#999;}
#tooltip {position:absolute; text-align:right; z-index:4300000; border:1px solid #000; background:#020202; padding:8px 12px; color:#fff; display:none; }

